maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:47: error: Unmatched closing brace '}' ignored here
}
^